# DAVAI-env

./: .gitignore  README.md  pyproject.toml
conf/: atos_bologna.ini  belenos.ini
docs/: make.jl  pages.jl
docs/src/: atos_bologna.md  exercise4developers.md  index.md  runtests.md
docs/src/uget/: uget.md  update_namelists.md
src/davai_env/: __init__.py  experiment.py  shelf.py
src/davai_env/cli/: build.py  new_xp.py  new_xp_from_bundle.py
src/davai_env/conf/: atos_bologna.ini  belenos.ini
